:recycle: Refactor: 공동구매 게시글 조회 로직, 패키지 리팩토링 (#30)