@@ -1,33 +1,31 @@
 package site.moamoa.backend.converter.postimage;
 
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
-import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
-import site.moamoa.backend.aws.s3.AmazonS3Manager;
+import site.moamoa.backend.global.aws.s3.AmazonS3Manager;
 import site.moamoa.backend.domain.mapping.PostImage;
 
+import java.util.List;
+
 @AllArgsConstructor
-@Component
 public class PostImageConverter {
-    private final AmazonS3Manager amazonS3Manager;
 
-    public List<PostImage> toPostImages(List<MultipartFile> multipartFiles) {
-      return multipartFiles.stream()
-          .map(this::convertToFileAndUrl)
-          .collect(Collectors.toList());
-    }
-    private PostImage convertToFileAndUrl(MultipartFile file) {
-      String storedImageUrl = saveFileAndGetUrl(file);
-      return PostImage.builder()
-          .url(storedImageUrl)
-          .build();
+    public static List<PostImage> toPostImages(List<MultipartFile> files, AmazonS3Manager amazonS3Manager) {
+        return files.stream()
+                .map(file -> PostImageConverter.convertToFileAndUrl(file, amazonS3Manager))
+                .toList();
     }
 
-    private String saveFileAndGetUrl(MultipartFile file) {
-      String postKey = amazonS3Manager.generatePostKeyName();
-      return amazonS3Manager.uploadImage(postKey, file);
+    private static PostImage convertToFileAndUrl(MultipartFile file, AmazonS3Manager amazonS3Manager) {
+        String storedImageUrl = saveFileAndGetUrl(file, amazonS3Manager);
+        return PostImage.builder()
+                .url(storedImageUrl)
+                .build();
+    }
+
+    private static String saveFileAndGetUrl(MultipartFile file, AmazonS3Manager amazonS3Manager) {
+        String postKey = amazonS3Manager.generatePostKeyName();
+        return amazonS3Manager.uploadImage(postKey, file);
     }
 
 }
